<resources>
    <string name="app_name">收款</string>
    <string name="choose_trans_type">选择交易类型</string>
    <string name="password_error">新密码和确认密码不一致</string>
    <string name="setting_switch">请开启设置开关</string>
    <string name="again_exit">再按一次返回键退出程序</string>
    <string name="card_num">卡号:</string>
    <string name="no_cashier_count">没有消费记录</string>
    <string name="use_alipay">启用支付宝</string>
    <string name="use_wepay">启用微信</string>
    <string name="use_hand_q">启用QQ钱包</string>
    <string name="use_hand_baidu">启用百度钱包</string>
    <string name="error_view_oops">出错了!</string>
    <string name="error_view_retry">点击重试</string>
    <string name="app_id">APPID：</string>
    <string name="partner_id">商户号：</string>
    <string name="key">KEY：</string>
    <string name="agent_id">AGENTID：</string>
    <string name="caozuoyuan_id">操作员ID：</string>
    <string name="caozuoyuan_password">操作员密码：</string>
    <string name="manage">管理</string>
    <string name="trans_cancle">交易撤销</string>
    <string name="cashier_manager">收银员管理</string>
    <string name="pay_setting">支付设置</string>
    <string name="offline_assistant">离线助手</string>
    <string name="main_menu_title">今日累计（元）</string>
    <string name="this_week_title">本周累计（元）</string>
    <string name="this_month_title">本月累计（元）</string>
    <string name="setting">设置</string>
    <string name="tip_setting">小费设置</string>
    <string name="feedback">意见反馈</string>
    <string name="version_num">版本号</string>
    <string name="SN_num">SN号</string>
    <string name="notes_contact">联系客服</string>
    <string name="version_code">1.0.1</string>
    <string name="use_wechat_pay">商戶模式：</string>
    <string name="app_key">APPKEY：</string>
    <string name="shanghu_key">商户密钥：</string>
    <string name="mchid_id">MCH_ID：</string>
    <string name="add_chashier_manger">添加收银员</string>
    <string name="edit_chashier_manger">编辑收银员信息</string>
    <string name="sign_in_code">登陆账号</string>
    <string name="manager_password">密码</string>
    <string name="manager_name">姓名</string>
    <string name="contact_stype">联系方式</string>
    <string name="is_manager">是否是管理员</string>
    <string name="btn_ok">确定</string>
    <string name="add_ticket">使用券</string>
    <string name="btn_micro">被扫</string>
    <string name="btn_native">扫一扫</string>
    <string name="check_trans_num">检查订单</string>
    <string name="two_dimension_paycode">二维码支付订单号</string>
    <string name="alipay_title">支付宝支付</string>
    <string name="trans_success">交易成功</string>
    <string name="tv_chaier">收银</string>
    <string name="tv_chaier_two">收银</string>
    <string name="yuan">元</string>
    <string name="tv_reduce">扣减</string>
    <string name="tv_pay">支付</string>
    <string name="btn_back_cashier">返回收银</string>
    <string name="card_bank_pay_title">银行卡</string>
    <string name="cashier_pay_title">现金</string>
    <string name="q_wallet_title">QQ钱包</string>
    <string name="bai_du_pay">百度钱包</string>
    <string name="trans_amount_zero">0.00</string>
    <string name="used_pay">应收</string>
    <string name="real_pay">实收</string>
    <string name="charge_amount">找零</string>
    <string name="round_amount">四舍五入</string>
    <string name="please_input_ticket_num">请输入券号</string>
    <string name="scan">扫描</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="host_ip">  cashier2.wizarpos.com</string>
    <string name="btn_confirm_pay">确认支付</string>
    <string name="host_setting">主机设置</string>
    <string name="host_address">主机地址:</string>
    <string name="host_port">端口：</string>
    <string name="host_original_port">  80</string>
    <string name="host_port_erro">端口错误!</string>
    <string name="member_card_title">会员卡</string>
    <string name="wepay_card_title">微信会员卡</string>
    <string name="scan_card">刷卡</string>
    <string name="scan_card_two">刷卡</string>
    <string name="success">收款成功 !</string>
    <string name="work_loading">工作台加载中......</string>
    <string name="please_scan_card">请刷卡</string>
    <string name="commit_your_suggesion">写下你遇到的问题或建议</string>
    <string name="commit">提交</string>
    <string name="connect">联系客服</string>
    <string name="tel_num">4008399665</string>
    <string name="two_code">二维码</string>
    <string name="human_work">手输</string>
    <string name="card_code">请输入:</string>
    <string name="code">请输入会员卡号</string>
    <string name="ticket_code">请输入券号</string>
    <string name="ticket">券使用</string>
    <string name="ticket_cancle_wechat">卡券核销</string>
    <string name="third_ticket_cancle">第三方卡券核销</string>
    <string name="wepay_ticket_cancle">微信卡券核销</string>
    <string name="wizar_ticket_cancle">慧商卡券核销</string>
    <string name="add_member_ticket">会员券使用</string>
    <string name="add_common_ticket">非会员券使用</string>
    <string name="add_wepay_ticket">微信券使用</string>
    <string name="wepay">微信</string>
    <string name="serial_num">流水号:</string>
    <string name="query">查询</string>
    <string name="trans_type">交易类型:</string>
    <string name="pay_amount">消费金额:</string>
    <string name="trans_time">交易时间:</string>
    <string name="one_month">近30天</string>
    <string name="today">今天</string>
    <string name="yestoday">昨天</string>
    <string name="this_week">本周</string>
    <string name="before_week">上周</string>
    <string name="this_month">本月</string>
    <string name="before_month">上月</string>
    <string name="today_total">今天汇总</string>
    <string name="serial_num_error">流水号错误!</string>
    <string name="trans_date">交易日期:</string>
    <string name="time_range">时间范围:</string>
    <string name="trans_type_">交易类型:</string>
    <string name="all">全部</string>
    <string name="cash">现金</string>
    <string name="no_count">没有收款记录</string>
    <string name="ticket_publish">券发行</string>
    <string name="same_update">同步更新</string>
    <string name="offline_put">离线上传</string>
    <string name="total_amount">总笔数（笔）</string>
    <string name="duizhun_two_code">将取景器对准二维码</string>
    <string name="auto_scan">即可自动扫描</string>
    <string name="alipay">支付宝</string>
    <string name="old_password">原密码:</string>
    <string name="new_password">新密码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="ticket_info">券信息</string>
    <string name="ok">确定</string>
    <string name="ticket_cancle">取消</string>
    <string name="super_manager">超管理员</string>
    <string name="count_detail">账本</string>
    <string name="trans_error">实收金额需要大于或等于应收金额！</string>
    <string name="bi">笔</string>
    <string name="before_month_total">上月汇总</string>
    <string name="this_month_total">本月汇总</string>
    <string name="this_week_total">本周汇总</string>
    <string name="yestoday_total">昨天汇总</string>
    <string name="before_week_total">上周汇总</string>
    <string name="cash_pay">现金消费</string>
    <string name="bankcard_pay">银行卡消费</string>
    <string name="membercard_pay">会员卡消费</string>
    <string name="alipay_title_sype">支付宝消费</string>
    <string name="wechatpay">微信消费</string>
    <string name="use_ticket">使用优惠券</string>
    <string name="f">F</string>
    <string name="shou_kuan_huizong">收款汇总</string>
    <string name="wo_yao_shou_kuan">我要收款</string>
    <string name="ka_quan_he_xiao">卡券核销</string>
    <string name="supper_manager_do_not_del">超级管理员不能被删除</string>
    <string name="no_permission">对不起，您没有操作权限</string>
    <string name="no_publish_ticket">没有添加发行券</string>
    <string name="no_ticket">没有可发行的券</string>
    <string name="ticket_cancle_success">核销成功</string>
    <string name="alipay_toast">请先配置支付参数</string>
    <string name="no_use_ticket">没有可用的会员卡券</string>
    <string name="wechatpay_toast">请先配置微信参数</string>
    <string name="qwalletpay">请先配置QQ钱包参数</string>
    <string name="qi_yong">未启用</string>
    <string name="chang_password">修改密码</string>
    <string name="wechat_pay">微信支付</string>
    <string name="bussiness_model">受理商模式</string>
    <string name="ticket_cancle_fail">核销失败</string>
    <string name="intput_num">0123456789</string>
    <string name="repeal_toast">注：小票上流水号有F,请勾选上F,否则输入纯数字流水号。</string>
    <string name="baidu_pay">百度钱包</string>
    <string name="partner">合作者身份ID</string>
    <string name="key_secret"> 密钥</string>
    <string name="agentId">代理人ID</string>
    <string name="appid">公众账号ID</string>
    <string name="mch_id">商户号：</string>
    <string name="bargainor_id">BARGAINOR_ID:</string>
    <string name="op_user_id">OP_USER_ID:</string>
    <string name="op_user_passwd">OP_USER_PASSWD:</string>
    <string name="other_pay">其他支付</string>
    <string name="mix_pay">组合支付|</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="config_baidupay_toast">请先配置百度钱包参数</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">请将二维码放入扫描框,即可自动扫码.</string>
    <string name="top_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="action_swipe">刷卡</string>
    <string name="action_qrcode">二维码</string>
    <string name="action_text">手输</string>
    <string name="title_activity_payment_item_setting">PaymentItemSettingActivity</string>
    <string name="consumption">消费</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="english_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="action_settings">Settings</string>
    <string name="total_account">总金额(元)</string>
    <string name="employee">收银员</string>
    <string name="exit">退出</string>
    <string name="draw_open">Open</string>
    <string name="draw_clsoe">Close</string>
    <string name="pay_cashier"></string>
    <string name="security_code_error">安全密码错误</string>
    <string name="trans_detail">交易记录</string>
    <string name="daily_summary">交易汇总</string>
    <string name="print_number">打印张数</string>
    <string name="employee_management">收银员管理</string>
    <string name="about">关于</string>
    <string name="print_choose_num">打印张数选择</string>
    <string name="user_name">登陆账号</string>
    <string name="pass_word">密码</string>
    <string name="login">登陆</string>
    <string name="make_up">补打</string>
    <string name="refund">撤销</string>
    <string name="receipt_number_show">流水号</string>
    <string name="receipt_number">流水号:</string>
    <string name="sale">消费</string>
    <string name="opertor_number">操作员:</string>
    <string name="type">类型</string>
    <string name="date">日期</string>
    <string name="custom">指定</string>
    <string name="enter_receipt_number">流水号(请输入数字部分)</string>
    <string name="reset">重置</string>
    <string name="search">查询</string>
    <string name="daily_summary_international">今日汇总</string>
    <string name="currencySymbol">¥</string>
    <string name="enter_a_tip">Or Enter a Tip</string>
    <string name="saleAmount">Sale Amount</string>
    <string name="select_a_tip_percent">Select a Tip Percent</string>
    <string name="_0Amount">$0.00</string>
    <string name="no_tip">No Tip</string>
    <string name="total_tip">Total:</string>
    <string name="approx_0_00">approx.￥0.00</string>
    <string name="note_approx">Note:1 USD = approx.5.12 CNY</string>
</resources>