<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <!--主界面  -->
    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <ImageView
            android:id="@+id/alipay_qr_code"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_alipay_native_top"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_dimension_paycode" />

            <TextView
                android:id="@+id/tv_order_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_alipay_micro"
                    style="?android:attr/absListViewStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_bg"
                    android:text="@string/btn_native"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_checked_native_order"
                    style="?android:attr/absListViewStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/round_corner_bg"
                    android:text="@string/check_trans_num"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
