<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/llTransType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical" >

        <Spinner
            android:id="@+id/trans_type_spinner"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textView1"
            android:background="@drawable/search_input" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:alpha="0.6"
            android:ems="4"
            android:gravity="right"
            android:text="@string/trans_type_"
            android:textColor="#000"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignRight="@+id/trans_type_spinner"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/down"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical" >

        <Spinner
            android:id="@+id/trans_date_spinner"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textView2"
            android:background="@drawable/search_input" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:alpha="0.6"
            android:ems="4"
            android:gravity="right"
            android:text="@string/time_range"
            android:textColor="#000"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignRight="@+id/trans_date_spinner"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/down"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:ems="4"
            android:gravity="right"
            android:text="@string/trans_date"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/start_et"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/search_input2"
            android:hint=""
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/end_et"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/search_input2"
            android:hint=""
            android:singleLine="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_serialnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:ems="4"
            android:gravity="right"
            android:text="@string/serial_num"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/serial_transnumber_et"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/search_input"
            android:digits="@string/intput_num"
            android:inputType="number"
            android:maxLines="15"
            android:singleLine="false"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/serial_num_error"
        android:textColor="@color/orange_color"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_query"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button_ok"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>