<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_menu_shouq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.wizarpos.barcode.scanner.ScannerRelativeLayout
            android:id="@+id/shou_qscan"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_dimension_paycode" />

            <TextView
                android:id="@+id/tv_qwallet_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/llBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btnNativePay"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:background="@drawable/round_corner_bg"
                android:text="@string/btn_native"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnCheckOrder"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_corner_bg"
                android:text="@string/check_trans_num"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
